--- a/DairyManagementSoftware/DairyManagementSoftware.csproj
+++ b/DairyManagementSoftware/DairyManagementSoftware.csproj
@@ -77,6 +77,12 @@
       <DependentUpon>login.cs</DependentUpon>
     </Compile>
     <Compile Include="member_class.cs" />
+    <Compile Include="print_bill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="print_bill.Designer.cs">
+      <DependentUpon>print_bill.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="record_class.cs" />
@@ -107,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="print_bill.resx">
+      <DependentUpon>print_bill.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
